# ProjectPisces4Applications

rhythm/: .eslintrc.json  .gitignore  PATCHLOG.md  README.md  jsconfig.json  package-lock.json  package.json  rollup.config.js
rhythm/attachment/node-player/: Cargo.toml  package.json
rhythm/attachment/node-player/.cargo/: config.toml
rhythm/attachment/node-player/src/: device.rs  lib.rs  player.rs
rhythm/attachment/node-smtc/: .gitignore  Cargo.toml  package.json
rhythm/attachment/node-smtc/src/: lib.rs  path.rs  smtc.rs
rhythm/batch/: _build.cmd  package.cmd  pfx.cmd  pre.cmd  run.cmd
rhythm/batch/node/: player.build.cmd  smtc.build.cmd
rhythm/package/: AppxManifest.xml  priconfig.xml
rhythm/package/Strings/en-us/: Resources.resw
rhythm/package/Strings/ja-jp/: Resources.resw
rhythm/package/Strings/zh-cn/: Resources.resw
rhythm/policy/: LICENSE.md
rhythm/policy/annexes/: LICENSE-0BSD  LICENSE-Apache-2.0  LICENSE-CC BY-NC-ND 4.0  LICENSE-MIT  LICENSE-OFL-1.1
rhythm/script/: generateMSIXFile.mjs  generateManifestFile.mjs  generatePFXFile.mjs  generateTestInstallerScript.mjs  initDirectoriesAndFiles.mjs  injectTestTool.mjs  pruneDevDependencies.mjs  randomAccessStreamPartner.mjs  repairDevDependencies.mjs
rhythm/script/resource/: blithe-installer-template.ps1  react-scan.js  wrapper-template.ps1
rhythm/source/: content.html  entry.mjs  main.html  setting.html
rhythm/source/main/: index.mjs
rhythm/source/main/content/: index.mjs
rhythm/source/renderer/: language.reactARIA.mjs
rhythm/test/: player-device.mjs  smtc-smtc.mjs  util-self.mjs
rhythm/test/util/: index.mjs  native.mjs  renderer.mjs  state.mjs
(+225 files in other folders)
